--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -20,8 +20,8 @@
 .btn-white {
     position: relative;
     background-color: #fff;
-    color: #f36014;
-    font-weight: 400;
+    color:#009e66;
+    font-weight: 500;
     font-size: 1.0rem;
     line-height:1.5;
 }
