--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -1,10 +1,24 @@
 
 .btn-dark-mode{
     position:fixed;
-    top:50%;
+    top:75%;
     left:2%;
-    transform:translate(-2%, -50%);
+    transform:translate(-2%, -75%);
   
+}
+
+.pos-github{
+    position:fixed;
+    top:85%;
+    left:2%;
+    transform:translate(-2%, -85%);
+}
+.pos-linkedin{
+    position:fixed;
+    top:95%;
+    left:2%;
+    transform:translate(-2%, -95%);
+    
 }
 
 .round{
@@ -39,6 +53,16 @@
     transform: translateY(-0.1rem);
     box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
 }
+.round:hover {
+   
+    transform: translateY(-0.3rem);
+    box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.2);
+}
+.round:active {
+    
+    transform: translateY(-0.1rem);
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.2);
+}
 .btn-white {
     position: relative;
     background-color: #fff;
@@ -48,6 +72,7 @@
     font-weight: 500;
     line-height:1.5;
 }
+
 .btn-black {
     position: relative;
     background-color: #2d3a4c;
@@ -93,6 +118,20 @@
     transition: all 0.5s;
     
 }
+.round::after {
+    content: "";
+    display: inline-block;
+    width: 100%;
+    height: 100%;
+    border-radius: 10rem;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: -5;
+    
+    transition: all 0.5s;
+    
+}
 .btn-white::after {
     
     background-color: #fff;
@@ -114,6 +153,17 @@
     opacity: 0;
 }
 .btn:active::after {
+  
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+}
+.round:hover::after {
+    
+    
+    transform: scaleX(1.4) scaleY(1.6);
+    opacity: 0;
+}
+.round:active::after {
   
     transform: scaleX(1.4) scaleY(1.6);
     opacity: 0;
