--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -93,8 +93,8 @@
   right: 0%;
   position: absolute;
   z-index: 90;
-  background: rgba(255, 255, 255, 0.55);
-  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  background: #3d6bb3;
+ 
   backdrop-filter: blur(4px)
 }
 
