--- a/src/components/Button/Button.css
+++ b/src/components/Button/Button.css
@@ -13,12 +13,35 @@
     left:2%;
     transform:translate(-2%, -85%);
 }
+
 .pos-linkedin{
     position:fixed;
     top:95%;
     left:2%;
     transform:translate(-2%, -95%);
     
+}
+@media (max-width:600px){
+    .pos-linkedin{
+        
+        top:95%;
+        left:25%;
+        transform:translate(-25%, -95%);
+        
+    }
+    .pos-github{
+    top:95%;
+    left:50%;
+    transform:translate(-50%, -95%); 
+    }    
+    .btn-dark-mode{
+       
+        top:95%;
+        left:75%;
+        transform:translate(-75%, -95%);
+      
+    }
+
 }
 
 .round{
