--- a/src/components/LandingText/LandingText.css
+++ b/src/components/LandingText/LandingText.css
@@ -2,36 +2,37 @@
     
     text-align: left;
     position: relative;
-    width: auto;
-    max-width: max-content;
-    height: auto;
-    animation: 1.7s ease-in-out infinite alternate shuffle-skills;
-   
+  
+    width: 110%;
+    animation: 1.5s linear infinite alternate shuffle-skills;
+    overflow:clip;
     
   }
 
   
     @keyframes shuffle-skills {
-      0% {width: 0px;overflow: clip; }
-      20% {width: 2px;overflow: clip}
-      60% {width: 35%; }
-      80% {width: 35%; }
-      100% {width: 35%; }
+      0% {width: 0px;overflow:clip;padding-right: 0;}
+      20% {width: 2px;overflow:clip;}
+      40% {width: 40%;overflow:clip;}
+      60% {width: 60%;padding-right:10px;}
+      80% {width: 80%; padding-right:10px;}
+      100% {width: 100%;padding-right:10px;}
     }
     
   .componentStyles::after{
-     
-      content: '';
-      height:100%;
-      position: absolute;
-      right:0px;
-      top: 50%;
-      transform: translateY(-50%);
-      width: 3px;
+   
+    content: '';
+    height:100%;
+    position: absolute;
+    right:0;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 3px;  
      
   }
 
   .componentStyles.dark-cursor::after{
+    
     background-color: rgb(0, 0, 0);
   }
 
@@ -40,7 +41,8 @@
   }
 
   .flexCenter {
-    display: flex;
+    
+    display: inline-flex;
     justify-content: center;
   }
 
