--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -1,12 +1,12 @@
 .root{
-    width: 100%;
+    width: 100vw;
     height: 100vh;
     position: absolute;
     top: 0;
     background: linear-gradient(to right bottom,
     rgba(126, 213, 111, 0.8),
     rgba(40, 180, 131, 0.8));
-    opacity: 0.4;
+    opacity: 1;
     z-index: 10000;
 }
 .close {
@@ -37,3 +37,20 @@
     transform: rotate(-45deg);
   }
   
+  .modal-children {
+    opacity: 1;
+    position: absolute;
+    max-width: 800px;
+    width: 70%;
+    height: auto;
+    top: 20%;
+    left: 50%;
+    transform:translate(-50%, -20%);
+
+    
+  }
+  @media (max-width: 768px) {
+   .modal-children{
+     width:90%;
+   }
+  }
