--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -1,56 +1,64 @@
-.root{
-    width: 100vw;
-    height: 100vh;
-    position: absolute;
-    top: 0;
-    background: linear-gradient(to right bottom,
-    rgba(126, 213, 111, 0.8),
-    rgba(40, 180, 131, 0.8));
-    opacity: 1;
-    z-index: 10000;
+.root {
+  width: 100%;
+  height: 100vh;
+  position: absolute;
+  top: 0;
+  background: linear-gradient(to right bottom,
+      rgba(126, 213, 111, 0.8),
+      rgba(40, 180, 131, 0.8));
+  opacity: 1;
+  overflow-y: scroll;
+  z-index: 10000;
 }
-.close {
-    position: absolute;
-    right: 32px;
-    top: 32px;
-    width: 32px;
-    height: 32px;
-    opacity: 1;
-    cursor: pointer;
-    transition:all ease 0.2s
-  }
-  .close:hover {
-    transform: scale(1.2);
-  }
-  .close:before, .close:after {
-    position: absolute;
-    left: 15px;
-    content: ' ';
-    height: 33px;
-    width: 3px;
-    background-color: rgb(0, 0, 0);
-  }
-  .close:before {
-    transform: rotate(45deg);
-  }
-  .close:after {
-    transform: rotate(-45deg);
-  }
-  
-  .modal-children {
-    opacity: 1;
-    position: absolute;
-    max-width: 800px;
-    width: 70%;
-    height: auto;
-    top: 20%;
-    left: 50%;
-    transform:translate(-50%, -20%);
 
-    
+.close {
+  position: absolute;
+  right: 32px;
+  top: 32px;
+  width: 32px;
+  height: 32px;
+  opacity: 1;
+  cursor: pointer;
+  transition: all ease 0.2s
+}
+
+.close:hover {
+  transform: scale(1.2);
+}
+
+.close:before,
+.close:after {
+  position: absolute;
+  left: 15px;
+  content: ' ';
+  height: 33px;
+  width: 3px;
+  background-color: rgb(0, 0, 0);
+}
+
+.close:before {
+  transform: rotate(45deg);
+}
+
+.close:after {
+  transform: rotate(-45deg);
+}
+
+.modal-children {
+  opacity: 1;
+  position: absolute;
+  max-width: 800px;
+  width: 70%;
+  height: auto;
+  top: 10%;
+  left: 50%;
+  transform: translate(-50%, -10%);
+
+
+}
+
+@media (max-width: 768px) {
+  .modal-children {
+    width: 90%;
   }
-  @media (max-width: 768px) {
-   .modal-children{
-     width:90%;
-   }
-  }
+}
